--- a/HTML_EXAMPLE/HTML_EXAMPLE.csproj
+++ b/HTML_EXAMPLE/HTML_EXAMPLE.csproj
@@ -71,6 +71,8 @@
     <Content Include="Body_Tags.html" />
     <Content Include="CSS\Style.css" />
     <Content Include="img2\24858html-nedir-ne-ise-yarar.jpg" />
+    <Content Include="Table_Tags.html" />
+    <Content Include="Text_Formatting_Elements.html" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
